Extension: quokka support added to the project, Prettier : added endofline property to config

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,7 @@
 	"htmlWhitespaceSensitivity": "strict",
 	"jsxBracketSameLine": false,
 	"jsxSingleQuote": true,
+	"endOfLine": "auto",
 	"printWidth": 195,
 	"singleQuote": true,
 	"tabWidth": 4,
