--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@babel/core": "^7.12.10",
 		"@babel/preset-env": "^7.12.11",
 		"@babel/preset-react": "^7.12.10",
+		"@babel/register": "^7.13.8",
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^5.0.1",
@@ -27,6 +28,7 @@
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"html-webpack-plugin": "^4.5.1",
+		"jsdom-quokka-plugin": "^1.0.16",
 		"mini-css-extract-plugin": "^1.3.3",
 		"node-sass": "~4.14.1",
 		"prettier": "^2.2.1",
